--- a/portfolio.html
+++ b/portfolio.html
@@ -16,23 +16,23 @@
     <header class="header">
         <div class="container header-container">
     <nav class="header-nav">
-            <a class="link logo" href="index.html">Web<span class="link logo logo-black">Studio</span></a>
-            <ul class="list header-list">
-                <li><a class="link header-link" href="./index.html">Студия</a></li>
-                <li><a class="link header-link current" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link header-link" href="">Контакты</a></li>
+            <a class="link logo" href="index.html">Web<span class="link logo logo--black">Studio</span></a>
+            <ul class="site-nav">
+                <li class="site-nav__item"><a class="site-nav__link " href="./index.html">Студия</a></li>
+                <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./portfolio.html">Портфолио</a></li>
+                <li class="site-nav__item"><a class="site-nav__link " href="">Контакты</a></li>
             </ul>
             </nav>
-    <ul class="list header-adress-list">
-        <li class="item"><a class="link header-address-link" href="info@devstudio.com">
-                <svg class="address-icon" width="16" height="12">
+    <ul class="header-address">
+        <li class="header-address__item"><a class="link header-address__link" href="info@devstudio.com">
+                <svg class="header-address__icon" width="16" height="12">
                     <use href="./images/symbol-defs.svg#icon-envelope">
                     </use>
                 </svg>info@devstudio.com
     
             </a></li>
-        <li class="item"><a class="link header-address-link" href="tel:+380961111111"><svg class="address-icon" width="10"
-                    height="16">
+        <li class="header-address__item"><a class="link header-address__link" href="tel:+380961111111"><svg
+                    class="header-address__icon" width="10" height="16">
                     <use href="./images/symbol-defs.svg#icon-smartphone">
                     </use>
                 </svg>+38 096 111 11 11</a></li>
@@ -193,78 +193,79 @@
     </main>
 
 <!---------------------------  FOOTER --------------------------------->
-
-<footer class="footer">
-    <div class="footer-container">
-        <div class="address-container">
-            <a class="link logo-blue" href="./index.html">Web<span class="link logo logo-white">Studio</span></a>
-            <address>
-                <ul class="list footer-list">
-                    <li>
-                        <a class="link footer-address" href="https://goo.gl/maps/tC4U7dV6mWvbns1K6">г. Киев, пр-т Леси
-                            Украинки,
-                            26</a>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__address-wrap">
+                <a class="logo logo__blue" href="./index.html">Web<span class="logo logo__white">Studio</span></a>
+                <address>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a class="footer__address-link footer__address-link--white"
+                                href="https://goo.gl/maps/tC4U7dV6mWvbns1K6">г. Киев, пр-т Леси Украинки,
+                                26</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__address-link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__address-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer__social-wrap">
+                <h3 class="footer__social-title">присоединяйтесь</h3>
+                <ul class="footer__social-list">
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="">
+                            <svg class="footer__icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li>
-                        <a class="link footer-email" href="mailto:info@example.com">info@example.com</a>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="">
+                            <svg class="footer__icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
-                    <li>
-                        <a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="">
+                            <svg class="footer__icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="">
+                            <svg class="footer__icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
+            <div class="subscription">
+                <h3 class="subscription__title">Подпишитесь на рассылку</h3>
+                <div class="subscription__wrap">
+                    <form class="subscription-form">
+                        <input type="text" class="subscription-form__input" name="sub-email" placeholder="E-mail">
+                        <button type="submit" class="subscription-form__btn">Подписаться<span
+                                class="subscription-form__item">
+                                <svg class="subscription-form__icon" width="24" height="24">
+                                    <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                                </svg></button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="footer-social-container">
-            <h3 class="footer-social-title">присоединяйтесь</h3>
-            <ul class="footer-social-list">
-                <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-instagram">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-facebook">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-linkedin">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-<div class="subscription-container">
-    <h3 class="subscription-title">Подпишитесь на рассылку</h3>
-    <div class="subscription-wrap">
-        <form class="footer-subscription">
-            <input type="text" class="input-subscription" name="sub-email" placeholder="E-mail">
-            <button type="submit" class="subscription-btn">Подписаться<span class="subscription-item">
-                    <svg class="subscription-icon" width="24" height="24">
-                        <use href="./images/symbol-defs.svg#icon-icon-send"></use>
-                    </svg></button>
-        </form>
-    </div>
-</div>
-    </div>
-</footer>
+    </footer>
+
 
 </body>
 
