--- a/portfolio.html
+++ b/portfolio.html
@@ -43,146 +43,146 @@
 
     <!---------------------------  Портфоліо --------------------------------->
     <main>
-        <section class="section-portfolio">
-           <div class="container portfolio-container">
+        <section class="portfolio">
+           <div class="container portfolio__container">
             <h1 class="visually-hidden">Портфолио</h1>
-<ul class="list portfolio-btn-list">
-    <li>
-        <button class="portfolio-btn" type="button">Все</button>
+<ul class="portfolio__btn-list">
+    <li class="portfolio__btn-item">
+        <button class="portfolio__btn" type="button">Все</button>
     </li>
-    <li>
-        <button class="portfolio-btn" type="button">Веб-сайты</button>
+    <li class="portfolio__btn-item">
+        <button class="portfolio__btn" type="button">Веб-сайты</button>
     </li>
-    <li>
-        <button class="portfolio-btn" type="button">Приложения</button>
+    <li class="portfolio__btn-item">
+        <button class="portfolio__btn" type="button">Приложения</button>
     </li>
-    <li>
-        <button class="portfolio-btn" type="button">Дизайн</button>
+    <li class="portfolio__btn-item">
+        <button class="portfolio__btn" type="button">Дизайн</button>
     </li>
-    <li>
-        <button class="portfolio-btn" type="button">Маркетинг</button>
+    <li class="portfolio__btn-item">
+        <button class="portfolio__btn" type="button">Маркетинг</button>
     </li>
 </ul>
 
-<ul class="list portfolio-item-list">
-    <li class="portfolio-item"> 
-        <a class="link portfolio-link" href="/">
-        <div class="portfolio-overlay">
+<ul class="portfolio__item-list">
+    <li class="portfolio__item"> 
+        <a class="portfolio__link" href="/">
+        <div class="portfolio__overlay">
         <img src="./images/8.jpg" alt="Фото вебсайта" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
         шпионажа и атак на защищённые сервера конкурентов.</p>
         </div>
-        <div class="cart-container">
-        <h2 class="portfolio-title" >Технокряк</h2>
-        <p class="portfolio-text" >Веб-сайт</p> 
+        <div class="portfolio__cart">
+        <h2 class="portfolio__title" >Технокряк</h2>
+        <p class="portfolio__text" >Веб-сайт</p> 
         </div>
         </a>
     </li>
    
-    <li class="portfolio-item"> 
-        <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item"> 
+        <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/9.jpg" alt="Дизайн постера" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-        <div class="cart-container">
-        <h2 class="portfolio-title" >Постер New Orlean vs Golden Star</h2>
-        <p class="portfolio-text" >Дизайн</p> 
+        <div class="portfolio__cart">
+        <h2 class="portfolio__title" >Постер New Orlean vs Golden Star</h2>
+        <p class="portfolio__text" >Дизайн</p> 
     </div>
     </a>
 
     </li>
-    <li class="portfolio-item"> 
-<a class="link portfolio-link" href="/">
-    <div class="portfolio-overlay">
+    <li class="portfolio__item"> 
+<a class="portfolio__link" href="/">
+    <div class="portfolio__overlay">
         <img src="./images/10.jpg" alt="Фото логотипа ресторана" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
         </div>
-        <div class="cart-container">
-        <h2 class="portfolio-title" >Ресторан Seafood</h2>
-        <p class="portfolio-text" >Приложение</p> 
+        <div class="portfolio__cart">
+        <h2 class="portfolio__title" >Ресторан Seafood</h2>
+        <p class="portfolio__text" >Приложение</p> 
         </div>
         </a>
     </li>
-    <li class="portfolio-item">
-         <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item">
+         <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/11.jpg" alt="Фото наушников" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-        <div class="cart-container"> <h2 class="portfolio-title" >Проект Prime</h2>
-        <p class="portfolio-text" >Маркетинг</p> 
+        <div class="portfolio__cart"> <h2 class="portfolio__title" >Проект Prime</h2>
+        <p class="portfolio__text" >Маркетинг</p> 
         </div>
         </a>
     </li>
-    <li class="portfolio-item">
-        <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item">
+        <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/12.jpg" alt="Дизайн упаковки" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-        <div class="cart-container"> <h2 class="portfolio-title" >Проект Boxes</h2>
-        <p class="portfolio-text" >Приложение</p> 
+        <div class="portfolio__cart"> <h2 class="portfolio__title" >Проект Boxes</h2>
+        <p class="portfolio__text" >Приложение</p> 
         </div>
         </a>
     </li>
-    <li class="portfolio-item"> 
-        <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item"> 
+        <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/13.jpg" alt="Фото моноблока" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
         </div>
-        <div class="cart-container">  <h2 class="portfolio-title" >Inspiration has no Borders</h2>
-        <p class="portfolio-text" >Веб-сайт</p> 
+        <div class="portfolio__cart">  <h2 class="portfolio__title" >Inspiration has no Borders</h2>
+        <p class="portfolio__text" >Веб-сайт</p> 
         </div>
         </a>
     </li>
-    <li class="portfolio-item">
-        <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item">
+        <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/14.jpg" alt="Фото журнала" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-        <div class="cart-container">  <h2 class="portfolio-title" >Издание Limited Edition</h2>
-        <p class="portfolio-text" >Дизайн</p> 
+        <div class="portfolio__cart">  <h2 class="portfolio__title" >Издание Limited Edition</h2>
+        <p class="portfolio__text" >Дизайн</p> 
         </div>
         </a>
     </li>
-    <li class="portfolio-item">
-        <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item">
+        <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/15.jpg" alt="Фото этикетки" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
         </div>
-        <div class="cart-container">  <h2 class="portfolio-title" >Проект LAB</h2>
-        <p class="portfolio-text" >Маркетинг</p> 
+        <div class="portfolio__cart">  <h2 class="portfolio__title" >Проект LAB</h2>
+        <p class="portfolio__text" >Маркетинг</p> 
         </div>
         </a>
     </li>
-    <li class="portfolio-item"> 
-        <a class="link portfolio-link" href="/">
-            <div class="portfolio-overlay">
+    <li class="portfolio__item"> 
+        <a class="portfolio__link" href="/">
+            <div class="portfolio__overlay">
         <img src="./images/16.jpg" alt="Работа за ноутбуком" width="370" height="294">
-        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+        <p class="portfolio__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
             платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-        <div class="cart-container">  <h2 class="portfolio-title" >Growing Business</h2>
-        <p class="portfolio-text" >Приложение</p> 
+        <div class="portfolio__cart">  <h2 class="portfolio__title" >Growing Business</h2>
+        <p class="portfolio__text" >Приложение</p> 
         </div>
         </a>
     </li>
