--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="container">
     <nav class="header-nav">  
     <a class="logo" href="index.html">Web<span class="logo logo--black">Studio</span></a>
-    <ul class="site-nav">
-        <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./index.html">Студия</a></li>
-        <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
-        <li class="site-nav__item"><a class="site-nav__link" href="">Контакты</a></li>
+    <ul class="header-nav__list">
+        <li class="header-nav__item"><a class="header-nav__link header-nav__link--current" href="./index.html">Студия</a></li>
+        <li class="header-nav__item"><a class="header-nav__link" href="./portfolio.html">Портфолио</a></li>
+        <li class="header-nav__item"><a class="header-nav__link" href="">Контакты</a></li>
     </ul>
     </nav>
     <ul class="header-address">
@@ -409,7 +409,7 @@
             <button type="submit" class="subscription-form__btn">Подписаться<span class="subscription-form__item">
                 <svg class="subscription-form__icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-icon-send"></use>
-                </svg></button>
+                </svg> </span> </button>
     </form>
     </div>
     </div>
@@ -454,7 +454,7 @@
 
 <div class="comments-wrap">
 <label for="online-comments" class="modal-text">Коментарии</label>
-<textarea class="online-comments"name="online-comments" id="online-comments"
+<textarea class="online-comments" name="online-comments" id="online-comments"
 placeholder="Введите текст">
 </textarea>
 </div>
