--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
         <div class="container header-container">
     <nav class="header-nav">
             <a class="link logo" href="index.html">Web<span class="link logo logo--black">Studio</span></a>
-            <ul class="site-nav">
-                <li class="site-nav__item"><a class="site-nav__link " href="./index.html">Студия</a></li>
-                <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./portfolio.html">Портфолио</a></li>
-                <li class="site-nav__item"><a class="site-nav__link " href="">Контакты</a></li>
+            <ul class="header-nav__list">
+                <li class="header-nav__item"><a class="header-nav__link" href="./index.html">Студия</a></li>
+                <li class="header-nav__item"><a class="header-nav__link header-nav__link--current" href="./portfolio.html">Портфолио</a></li>
+                <li class="header-nav__item"><a class="header-nav__link" href="">Контакты</a></li>
             </ul>
             </nav>
     <ul class="header-address">
@@ -259,7 +259,8 @@
                                 class="subscription-form__item">
                                 <svg class="subscription-form__icon" width="24" height="24">
                                     <use href="./images/symbol-defs.svg#icon-icon-send"></use>
-                                </svg></button>
+                                </svg> </span> 
+                            </button>
                     </form>
                 </div>
             </div>
